--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+diesel = {version = "2.1.1", features = ["sqlite", "chrono"]}
+dotenv = "0" 
+chrono = { version = "0.4"}
+input_validation = "0.1.2"
